# train-track-crossing-simulation

./: CMakeLists.txt  README.md
FreeRTOSv10.0.1/FreeRTOS-Plus/Source/FreeRTOS-Plus-Trace/config/: trcConfig.h
FreeRTOSv10.0.1/FreeRTOS/Demo/WIN32-MSVC/Debug/: RTOSDemo.exe.recipe  WIN32.vcxproj.FileListAbsolute.txt
FreeRTOSv10.0.1/FreeRTOS/Demo/WIN32-MSVC/Debug/RTOSDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RTOSDemo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
src/: main.c
